fix button type and card title cropping

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -32,6 +32,8 @@
   border: none;
   background-color: transparent;
   opacity: 0.4;
+  /* background-position: center;
+  background-repeat: no-repeat; */
 }
 
 .card__like-button:hover {
@@ -46,6 +48,6 @@
 
   .card__title {
     font-size: 16px;
-    line-height: 1;
+    max-width: 260px;
   }
 }
